--- a/index-2.html
+++ b/index-2.html
@@ -100,7 +100,7 @@
 		camera.add( listener );
 
 		//lists different audio video tracks to play
-		const soundList = [ "resources/black-polished.mp3", "resources/progressive-starts.mp3", "resources/the-pursuit.mp3","resources/tszil.mp3"];
+		const soundList = [ "resources/progressive-starts.mp3", "resources/tszil.mp3", "resources/black-polished.mp3", "resources/the-pursuit.mp3" ];
 		const videoList = [ "resources/jazz-video.mp4", "resources/piano-video.mp4", "resources/singing-bird.mp4", "resources/cicada.webm" ];
 
 		//uses audio video list and adds a screen in scene for each, works only for 4 tracks
@@ -118,7 +118,7 @@
 			audioLoader.load( soundList[i], function ( buffer ) {
 
 				positionalAudio.setBuffer( buffer );
-				positionalAudio.setRefDistance( 90 );
+				positionalAudio.setRefDistance( 4 );
 				positionalAudio.loop = true;
 				positionalAudio.play();
 				positionalAudio.setDirectionalCone( 180, 230, 0.5 );
@@ -139,7 +139,7 @@
 
 			let planeMesh = new THREE.Mesh(
 				new THREE.PlaneGeometry( 1, 1, 2, 2 ),
-				new THREE.MeshBasicMaterial( { map: videoTexture, side: THREE.DoubleSide, transparent: false, opacity: 0.1 } )
+				new THREE.MeshBasicMaterial( { map: videoTexture, side: THREE.DoubleSide } )
 			);
 
 			videoScreen.add( planeMesh );
@@ -166,7 +166,7 @@
 			video.onloadeddata = function () {
 				const aspectRatio = video.videoWidth / video.videoHeight;
 				planeMesh.scale.set( 30 * aspectRatio, 30, 1 );
-				planeMesh.position.y = 15;
+				planeMesh.position.y = 20;
 			};
 
 			scene.add( videoScreen );
@@ -209,48 +209,28 @@
 		}
 
 		function render( time ) {
-    const delta = clock.getDelta();
+			const delta = clock.getDelta();
 
-    // Only required if FirstPersonControls is used
-    if (controlFirstPerson) {
-        controls.update( delta );
-    }
+			//only required if FirstPersonControls is used
+			if (controlFirstPerson) {
+				controls.update( delta );
+			}
 
-    // Loop over each video screen and update audio volume based on distance
-    scene.traverse(function (object) {
-        if (object instanceof THREE.Object3D && object.children.length > 0) {
-            const positionalAudio = object.children.find(child => child instanceof THREE.PositionalAudio);
+			if (resizeRendererToDisplaySize( renderer )) {
+				const canvas = renderer.domElement;
+				camera.aspect = canvas.clientWidth / canvas.clientHeight;
+				camera.updateProjectionMatrix();
 
-            if (positionalAudio) {
-                // Calculate distance between camera and video screen
-                const distance = camera.position.distanceTo(object.position);
+				//only required if FirstPersonControls is used
+				if (controlFirstPerson) {
+					controls.handleResize();
+				}
+			}
 
-                // Set volume based on distance (closer = louder)
-                const maxDistance = 200;  // Adjust based on how far the videos are spread out
-                const minDistance = 30;   // The closest distance you'd want to affect the volume
-                const volume = 1 - Math.min(distance / maxDistance, 1);
+			renderer.render( scene, camera );
 
-                // Adjust the audio volume dynamically
-                positionalAudio.setVolume(volume);
-            }
-        }
-    });
-
-    if (resizeRendererToDisplaySize( renderer )) {
-        const canvas = renderer.domElement;
-        camera.aspect = canvas.clientWidth / canvas.clientHeight;
-        camera.updateProjectionMatrix();
-
-        if (controlFirstPerson) {
-            controls.handleResize();
-        }
-    }
-
-    renderer.render( scene, camera );
-
-    requestAnimationFrame( render );
-}
-
+			requestAnimationFrame( render );
+		}
 
 		requestAnimationFrame( render );
 
